// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CloseButton > styles > should render and match snapshot when not visible 1`] = `
.circuit-0 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
}

@media (min-width: 960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  class="_base_93e8a6 _secondary_93e8a6 _m_93e8a6 _focus-visible_73b4bb _base_037c7e _m_037c7e _base_9bf092 circuit-0"
  title="Close"
  type="button"
>
  <span
    aria-hidden="true"
    class="_loader_93e8a6"
  >
    <span
      class="_dot_93e8a6"
    />
    <span
      class="_dot_93e8a6"
    />
    <span
      class="_dot_93e8a6"
    />
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_93e8a6"
  >
    <svg
      aria-hidden="true"
      class="_leading-icon_93e8a6"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
        fill="currentColor"
      />
    </svg>
    <span
      class="_label_93e8a6"
    >
      Close
    </span>
  </span>
</button>
`;

exports[`CloseButton > styles > should render and match snapshot when visible 1`] = `
.circuit-0 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
  visibility: inherit;
  opacity: 1;
}

@media (min-width: 960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  class="_base_93e8a6 _secondary_93e8a6 _m_93e8a6 _focus-visible_73b4bb _base_037c7e _m_037c7e _base_9bf092 circuit-0"
  title="Close"
  type="button"
>
  <span
    aria-hidden="true"
    class="_loader_93e8a6"
  >
    <span
      class="_dot_93e8a6"
    />
    <span
      class="_dot_93e8a6"
    />
    <span
      class="_dot_93e8a6"
    />
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_93e8a6"
  >
    <svg
      aria-hidden="true"
      class="_leading-icon_93e8a6"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
        fill="currentColor"
      />
    </svg>
    <span
      class="_label_93e8a6"
    >
      Close
    </span>
  </span>
</button>
`;
